Aggiunta automazione per gestione conflitti cona la versione ufficiale quando viene aggiornata l'integrazione ufficiale cercherò di fare in modo che aggiorni questa integrazione e che se la logica fosse ancora sbagliata su quella ufficiale, venga mantenuta qui

--- a/.github/workflows/auto_sync_tuya.yml
+++ b/.github/workflows/auto_sync_tuya.yml
@@ -1,14 +1,14 @@
-name: Sincronizzazione con Conflitti (Scenario A)
+name: Sincronizzazione Reale Core (Scenario A)
 on:
   schedule:
-    - cron: '0 0 * * *' # Ogni notte
-  workflow_dispatch:      # Per avviarlo ora manualmente
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
-  create-conflict-pr:
+  sync-core:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout del tuo repo
+      - name: Checkout tuo repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -18,34 +18,37 @@ jobs:
           git config user.name "GitHub Action Bot"
           git config user.email "action@github.com"
 
-      - name: Crea branch temporaneo dal Core Ufficiale
+      - name: Preleva codice dal Core Ufficiale
         run: |
-          # 1. Crea un branch vuoto chiamato 'upstream-branch'
-          git checkout -b upstream-branch
-          
-          # 2. Scarica il file climate.py ufficiale di Home Assistant
-          # Lo mettiamo nello stesso percorso del tuo file
-          curl -sL https://raw.githubusercontent.com/home-assistant/core/dev/homeassistant/components/tuya/climate.py -o custom_components/tuya/climate.py
-          
-          # 3. Salva questa versione ufficiale nel branch temporaneo
-          git add custom_components/tuya/climate.py
-          git commit -m "Codice ufficiale Tuya da Home Assistant Core"
-          
-          # 4. Carica il branch temporaneo su GitHub
-          git push origin upstream-branch --force
+          # Aggiungiamo il repo ufficiale come sorgente
+          git remote add upstream https://github.com/home-assistant/core.git
+          git fetch upstream dev
 
-      - name: Apri Pull Request per generare il conflitto
+          # Creiamo un branch per il confronto
+          git checkout -b temp-upstream-compare
+
+          # Sostituiamo il tuo file climate.py con quello del Core
+          # Questo comando estrae il file dal Core e lo mette nel tuo percorso
+          git checkout upstream/dev -- homeassistant/components/tuya/climate.py
+          
+          # Spostiamo il file nel percorso del tuo custom_component
+          mkdir -p custom_components/tuya/
+          mv homeassistant/components/tuya/climate.py custom_components/tuya/climate.py
+          
+          # Puliamo la cartella creata dal checkout
+          rm -rf homeassistant/
+
+          git add custom_components/tuya/climate.py
+          git commit -m "Aggiornamento ufficiale dal Core"
+          git push origin temp-upstream-compare --force
+
+      - name: Crea Pull Request con Conflitti
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: upstream-branch  # Il branch con il codice ufficiale
-          base: main               # Il tuo branch con il fix Cecotec
-          title: "⚠️ AGGIORNAMENTO TUYA: Risolvi i conflitti"
+          branch: temp-upstream-compare
+          base: main
+          title: "⚠️ CONFLITTO RILEVATO: Allineamento Core"
           body: |
-            L'integrazione Tuya ufficiale è cambiata.
-            
-            **Istruzioni per lo Scenario A:**
-            1. Vai in fondo a questa pagina.
-            2. Clicca sul tasto **"Resolve conflicts"**.
-            3. Usa i tasti in alto per decidere quali righe tenere.
-            4. Assicurati di mantenere il tuo fix
+            Il file `climate.py` del Core ufficiale è diverso dal tuo.
+            Risolvi i conflitti per mantenere il fix
